--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "start": "react-scripts start",
    "scripts": {
-    "start": "react-scripts start"
+    "start": "react-scripts start",
+    "build": "react-scripts build"
   }
 }
